--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -23,13 +23,14 @@ jobs:
 
       - name: Build, unit tests and integration tests
         run: |
+          cd catalog-service
           mvn clean install
 
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
         with:
-          path: "${{ github.workspace }}"
+          path: "${{ github.workspace }}/catalog-service"
           fail-build: false
           severity-cutoff: high
 
@@ -37,4 +38,6 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         if: success() || failure()
         with:
-          sarif_file: ${{ steps.scan.outputs.sarif }}
+          sarif_file: ${{ github.workspace }}/catalog-service/scan-results.sarif
+
+
