--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -23,26 +23,26 @@ jobs:
 
       - name: Build, unit tests, and integration tests
         run: |
-          cd native/catalog-service
+          cd catalog-service
           mvn clean install
+
+      - name: Debug - List directory structure
+        run: |
+          pwd
+          ls -R
 
       - name: Code vulnerability scanning
         uses: anchore/scan-action@v3
         id: scan
         with:
-          path: "${{ github.workspace }}/native/catalog-service"
+          path: "catalog-service"
           fail-build: false
           severity-cutoff: high
 
-      - name: List files for debugging
-        run: |
-          ls -al ${GITHUB_WORKSPACE}/native/catalog-service
-
       - name: Upload vulnerability report
-        uses: github/codeql-action/upload-sarif@v3
-        if: success() || failure()
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ${{ github.workspace }}/native/catalog-service/scan-results.sarif
+          sarif_file: ${{ steps.scan.outputs.sarif }}
 
 
 
