--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -14,6 +14,19 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         multiplier: 1.1
+  datasource:
+    username: user
+    password: password
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
+    hikari:
+      connection-timeout: 2000
+      maximum-pool-size: 5
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    user: user
+    password: password
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
 
 server:
   port: 9001
