--- a/catalog-service/pom.xml
+++ b/catalog-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.polarbookshop</groupId>
 	<artifactId>catalog-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>catalog-service</name>
 	<description>Manages The Books In The Catalog</description>
 	<url/>
