--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.polarbookshop</groupId>
 	<artifactId>config-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>config-service</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
