--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 spring:
   application:
-    name: order-service
+    name: "order-service"
+  config:
+    import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
   lifecycle:
     timeout-per-shutdown-phase: 15s
   r2dbc:
@@ -24,3 +37,9 @@ server:
 
 polar:
   catalog-service-uri: "http://localhost:9001"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
