--- a/polar-deployment/docker/docker-compose.yml
+++ b/polar-deployment/docker/docker-compose.yml
@@ -1,6 +1,15 @@
 
 services:
 
+  polar-redis:
+    image: "redis:7.0"
+    container_name: "polar_redis"
+    ports:
+      - 6379:6379
+    networks:
+      - polar-network
+
+
   catalog-service:
     image: "catalog-service"
     depends_on:
