--- a/edge-service/pom.xml
+++ b/edge-service/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.polarbookshop</groupId>
 	<artifactId>edge-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>edge-service</name>
 	<description>API gateway and cross-cutting concerns</description>
 	<url/>
@@ -61,6 +62,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
