--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  config:
+    import: "optional:configserver:"
   session:
     store-type: redis
     timeout: 10m
@@ -9,6 +11,16 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 15s
   cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
     gateway:
       routes:
         - id: catalog-route
@@ -90,7 +102,14 @@ logging:
   level:
     io.github.resilience4j: DEBUG
 
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
 
 
 
