--- a/polar-deployment/docker/docker-compose.yml
+++ b/polar-deployment/docker/docker-compose.yml
@@ -3,11 +3,43 @@ services:
 
   polar-redis:
     image: "redis:7.0"
-    container_name: "polar_redis"
+    container_name: "polar-redis"
     ports:
       - 6379:6379
     networks:
       - polar-network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+
+  edge-service:
+    depends_on:
+      polar-redis:
+        condition: service_healthy
+      config-service:
+        condition: service_healthy
+    image: "edge-service"
+    ports:
+      - 9000:9000
+    deploy:
+      resources:
+        limits:
+          memory: 700m
+    environment:
+      - CATALOG_SERVICE_URL=http://catalog-service:9001
+      - ORDER_SERVICE_URL=http://order-service:9002
+      - SPRING_CLOUD_CONFIG_URI=http://config-service:8888
+      - SPRING_DATA_REDIS_HOST=polar-redis
+    networks:
+      - polar-network
+    healthcheck:
+      test: [ "CMD-SHELL", "curl -f http://localhost:9000/actuator/health || exit 1" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 
   catalog-service:
