--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   config:
     import: "optional:configserver:"
   cloud:
+    function:
+      definition: dispatchOrder
     config:
       uri: http://localhost:8888
       request-connect-timeout: 5000
@@ -14,6 +16,19 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         multiplier: 1.1
+    stream:
+      bindings:
+        dispatchOrder-in-0:
+          destination: order-dispatched
+          group: ${spring.application.name}
+        acceptOrder-out-0:
+          destination: order-accepted
+      rabbit:
+        bindings:
+          acceptOrder-out-0:
+            producer:
+              transacted: true
+
   lifecycle:
     timeout-per-shutdown-phase: 15s
   r2dbc:
@@ -28,6 +43,12 @@ spring:
     user: ${spring.r2dbc.username}
     password: ${spring.r2dbc.password}
     url: jdbc:postgresql://localhost:5432/polardb_order
+  rabbitmq:
+    connection-timeout: 5s
+    host: localhost
+    port: 5672
+    password: password
+    username: user
 server:
   port: 9002
   shutdown: graceful
