--- a/dispatcher-service/src/main/resources/application.yml
+++ b/dispatcher-service/src/main/resources/application.yml
@@ -11,6 +11,19 @@ spring:
           group: ${spring.application.name}
         packlabel-out-0:
           destination: order-dispatched
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: true
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
+  config:
+    import: "optional:configserver:"
+
 
   rabbitmq:
     host: localhost
@@ -20,3 +33,9 @@ spring:
     connection-timeout: 5s
 server:
   port: 9003
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
